[gd_scene load_steps=7 format=2]

[ext_resource path="res://objects/Jumper.gd" type="Script" id=1]
[ext_resource path="res://assets/images/jumper.png" type="Texture" id=2]
[ext_resource path="res://assets/audio/29.wav" type="AudioStream" id=3]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0, 0.894737 )
colors = PoolColorArray( 0.054902, 0.843137, 0.270588, 0, 0, 0.984314, 0.0156863, 1 )

[sub_resource type="Shader" id=2]
code = "shader_type canvas_item;

uniform vec4 color: hint_color;

void fragment() {
	COLOR.rgb = color.rgb;
	COLOR.a = texture(TEXTURE, UV).a;
}"

[sub_resource type="ShaderMaterial" id=3]
shader = SubResource( 2 )
shader_param/color = Color( 0.161877, 0.769531, 0.0931854, 1 )

[node name="Jumper" type="Area2D"]
script = ExtResource( 1 )

[node name="Trail" type="Node" parent="."]

[node name="Points" type="Line2D" parent="Trail"]
points = PoolVector2Array( -0.50753, -0.239849 )
gradient = SubResource( 1 )
__meta__ = {
"_editor_description_": ""
}

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 3 )
texture = ExtResource( 2 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
visible = false
polygon = PoolVector2Array( -0.114563, -20.8768, -20.1555, 19.8004, 20.5217, 20.5941 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
visible = false

[node name="Beep" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -15.001
[connection signal="area_entered" from="." to="." method="_on_Jumper_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_Jumper_area_exited"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
